# data_platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_make_name_nullable.py  003_add_flow_tables.py  004_add_flow_audit_and_index.py
docs/plans/: 2026-03-27-flow-orchestration-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
openspec/: config.yaml
src/: main.py
src/api/: deps.py  errors.py  health.py
src/connectors/: __init__.py  base.py  feishu.py  fenxiangxiaoke.py  kingdee_erp.py  kingdee_plm.py  lingxing.py  zentao.py
src/core/: celery_app.py  config.py  database.py  entity_registry.py  exceptions.py  security.py
src/models/: base.py  (+7 more)
tests/: conftest.py  test_api_connectors.py  test_api_data.py  test_api_deps.py  test_api_entity_schemas.py  test_api_errors.py  test_api_field_mappings.py  test_api_health.py  test_api_push.py  test_api_sync_logs.py  test_api_sync_tasks.py  test_celery_tasks.py  test_compute_next_run.py  test_config.py  test_connector_base.py  test_connector_feishu.py  test_connector_fenxiangxiaoke.py  test_connector_kingdee.py  test_connector_kingdee_plm.py  test_connector_lingxing.py  test_connector_service.py  test_connector_zentao.py  test_database.py  test_field_mapping.py  test_flow_api.py  test_flow_service.py  test_flow_tasks.py  test_models.py  test_p1_base_retry.py  test_p1_cq_fixes.py  test_scheduler.py  test_spa_fallback.py  test_sync_service.py
(+56 files in other folders)
